--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,9 @@
     "version": "1.0",
     "repositories": [
         {
-            "type": "vcs",
-            "url":  "git@github.com:thenguyenit/xhprof.git"
+            "type": "git",
+            "url":  "git://github.com:thenguyenit/xhprof.git",
+            "reference": "master"
         }
     ]
 }
